<resources>
    <string name="app_name">UFPS RADIO</string>
    <string name="action_settings">Ajustes</string>

    <string name="no_stream">Radio station couldn\'t stream!</string>
    <string name="live_broadcast">EN VIVO</string>
    <string name="alAire">Al aire</string>
    <string name="fm">95.2 FM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programacion">Programación</string>
    <string name="equipo">Equipo</string>
    <string name="programas">Programas</string>
    <string name="nom_team_2_prueba">GRECIA KARINA CORZO MENDOZA</string>
    <string name="cargo_team_2_prueba">JEFE DE PRODUCCIÓN Y PROGRAMACIÓN</string>
    <string name="nom_team_1_prueba">FELIX JOAQUÍN LOZANO CARDENAS</string>
    <string name="cargo_team_1_prueba">COORDINADOR - SCRUM</string>
    <string name="dia_1">Lunes</string>
    <string name="dia_2">Martes</string>
    <string name="dia_3">Miercoles</string>
    <string name="dia_4">Jueves</string>
    <string name="dia_5">Viernes</string>
    <string name="dia_6">Sádado</string>
    <string name="dia_7">Domingo</string>
    <string name="nom_prog_prueba_1">SIENTE LA U</string>
    <string name="horario_prog_prueba_1">Lunes a viernes de 8:00 a 8:30 a.m</string>
    <string name="descrip_programa_1">Magazín matutino con lo mejor de la UFPS Cúcuta, información local, regional, nacional e internacional.</string>

</resources>
