<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HojaProgramacionFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabIndicatorHeight="@dimen/dimTabIndicator"
        android:background="@color/colorWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_lunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_1"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_martes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_2"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_miercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_3"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_jueves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_4"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_viernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_5"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_6"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_7"/>

    </android.support.design.widget.TabLayout>


</FrameLayout>