<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mcakir.radio.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--Contenido-->
    <include layout="@layout/content_main"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabIndicatorHeight="@dimen/dimTabIndicator"
        android:background="@color/colorWhite"
        android:layout_gravity="bottom">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_programacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programacion"
            android:icon="@drawable/ic_programacion"
            />
        <android.support.design.widget.TabItem
            android:id="@+id/tab_equipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo"
            android:icon="@drawable/ic_equipo"
            />
        <android.support.design.widget.TabItem
            android:id="@+id/tab_programas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programas"
            android:icon="@drawable/ic_programas"
            />
    </android.support.design.widget.TabLayout>

</android.support.design.widget.CoordinatorLayout>
