<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/sub_player"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:orientation="horizontal"
            android:padding="@dimen/space_margin">

            <ImageButton
                android:id="@+id/playTrigger"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_play_arrow_black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center|start"
                    android:text="@string/app_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/fm"
                    android:textSize="19dp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginLeft="@dimen/fab_margin"
                android:background="@drawable/boder_text"
                android:gravity="center"
                android:text="@string/alAire"
                android:textAlignment="center"

                android:textColor="@color/colorWhite"
                android:textSize="19dp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>