<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_margin"
    android:layout_marginBottom="50dp"
    tools:context=".fragments.EquipoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/space_margin"
            android:layout_marginLeft="@dimen/space_margin">

            <LinearLayout
                android:id="@+id/lay_team_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_border"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:id="@+id/image_prog1"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/felix"
                    android:padding="@dimen/space_margin"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_margin"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/nom_team_1_prueba"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/cargo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/cargo_team_1_prueba"
                            android:textSize="10dp"
                            android:textAlignment="center"/>
                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_team_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_background"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:id="@+id/image_team_2"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/grecia"
                    android:padding="@dimen/space_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/nombre_team_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/nom_team_2_prueba"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/cargo_team_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/cargo_team_2_prueba"
                        android:textSize="10dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

            <!-- TODO: ESTATICO  Card sin IDs-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_border"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/jessica"
                    android:padding="@dimen/space_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="JESSICA BARRERA PINTO"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="PRODUCTORA RADIAL"
                        android:textSize="10dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_background"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/jesus"
                    android:padding="@dimen/space_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="JESÚS ENRIQUE HERNÁNDEZ CONTRERAS"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="DJ Y CONTROL MASTER"
                        android:textSize="10dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_border"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/miguel"
                    android:padding="@dimen/space_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="MIGUEL ÁNGEL ESTÉVEZ RESTREPO"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="CONTROL MASTER"
                        android:textSize="10dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal"
                android:padding="@dimen/space_margin"
                android:background="@drawable/card_team_background"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/patricia"
                    android:padding="@dimen/space_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="CARMEN PATRICIA ÁLVAREZ CÁCERES"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="SECRETARIA"
                        android:textSize="10dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>
            <!--           Fin Card sin IDs-->

        </LinearLayout>

    </ScrollView>

</FrameLayout>